<package format="2">
  <name>cloud_robot</name>
  <version>1.0.0</version>
  <description>Cloud deployed ROS nodes on AWS</description>

  <maintainer email="cloud@isrobotics.com">IS Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
